--- a/nr-add-doc-expand-publish/ig/demarrer_sur_fhir.html
+++ b/nr-add-doc-expand-publish/ig/demarrer_sur_fhir.html
@@ -273,7 +273,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Ces jeux de valeurs peuvent reprendre des concepts définis dans des terminologies de deux manières : via l’ajout de concept unitaire, ou via l’ajout de règles logiques (Exemple : l’ensemble des pathologies du système nerveux de la terminologie CIM-10).</p>
 
-<p>Pour accéder à la liste de code associée à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d’obtenir l’ensemble des codes par expansion. Cette opération est disponible sur le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
+<p>Pour accéder à la liste de codes associés à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d’obtenir l’ensemble des codes par expansion. Cette opération est disponible sur le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
 
 
 
@@ -316,7 +316,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Apr 28, 2025 12:14+0000">2025-04-28</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Apr 28, 2025 14:35+0000">2025-04-28</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
