--- a/nr-release-018/ig/qa-ipreview.html
+++ b/nr-release-018/ig/qa-ipreview.html
@@ -130,7 +130,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.7 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Apr 28, 2025 16:06+0000">2025-04-28</span>
+. Generated           <span title="Mon, Apr 28, 2025 16:08+0000">2025-04-28</span>
 
                     <br/>
 
@@ -160,7 +160,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.7 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Apr 28, 2025 16:06+0000">2025-04-28</span>
+. Generated           <span title="Mon, Apr 28, 2025 16:08+0000">2025-04-28</span>
 
                     <br/>
 
@@ -778,7 +778,7 @@ Une concertation de minimum trois mois doit être lancée sur la plateforme     
         </td>
         <td>
 Les artifacts terminologiques (Terminologies et Jeux de Valeurs) pour usage français sont accessibles par consultation du           <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a>
- de l’ANS. Le SMT permet d’accéder à ces artifacts de différentes manières : par API FHIR, par interface graphique, par des requêtes SPARQL … Celui-ci est complémentaire aux guides d’implémentation car celui-ci permet d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.
+ de l’ANS. Le SMT permet d’accéder à ces artifacts de différentes manières : par API FHIR, par interface graphique, par des requêtes SPARQL … Ce service est complémentaire aux guides d’implémentation en permettant d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.
         </td>
       </tr>
       <tr>
