--- a/main/ig/qa-ipreview.html
+++ b/main/ig/qa-ipreview.html
@@ -130,7 +130,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.8 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Apr 29, 2025 09:19+0000">2025-04-29</span>
+. Generated           <span title="Tue, Apr 29, 2025 09:22+0000">2025-04-29</span>
 
                     <br/>
 
@@ -160,7 +160,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.8 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Apr 29, 2025 09:19+0000">2025-04-29</span>
+. Generated           <span title="Tue, Apr 29, 2025 09:22+0000">2025-04-29</span>
 
                     <br/>
 
@@ -1035,7 +1035,7 @@ Pour information,           <a href="https://github.com/FHIR/GoFSH">GoFSH</a>
           <a href="https://github.com/ansforge/IG-template">github.com</a>
         </td>
         <td>
-1/ Créer un template pour votre organisation (          <a href="https://github.com/ansforge/IG-template">exemple de celui de l’ANS</a>
+1/ Créer un template adapté à votre organisation (          <a href="https://github.com/ansforge/IG-template">exemple de celui de l’ANS</a>
 )
         </td>
       </tr>
@@ -1047,8 +1047,8 @@ Pour information,           <a href="https://github.com/FHIR/GoFSH">GoFSH</a>
           <a href="https://github.com/ansforge/IG-website-release">github.com</a>
         </td>
         <td>
-2/ Créer un répertoire GitHub qui va contenir le contenu des pages web à publier (          <a href="https://github.com/ansforge/IG-website-release">exemple de celui de l’ANS</a>
-)
+2/ Créer un répertoire GitHub qui va porter le contenu des pages web à publier (          <a href="https://github.com/ansforge/IG-website-release">exemple de celui de l’ANS</a>
+). Celui-ci doit avoir la bonne arborescence de dossiers.
         </td>
       </tr>
       <tr>
