correction faute 268109ca62dea77255ee5a2aba2d01d00e934e3b

--- a/nr-update-index-page/ig/index.html
+++ b/nr-update-index-page/ig/index.html
@@ -272,7 +272,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Ce guide d’implémentation “documentation” contient l’ensemble des bonnes pratiques de création de guides d’implémentation pour les FHIR modelers, ainsi que la documentation sur “comment lire un guide d’implémentation” pour un implémenteur.</p>
 
-<p>Ces travaux se placent dans une démarche d’élaboration continue. L’objectif étant de profiter de l’intelligence collective pour faire évoluer les spécifications versionnées.</p>
+<p>Ces travaux se placent dans une démarche d’amélioration continue. L’objectif étant de profiter de l’intelligence collective pour faire évoluer les spécifications versionnées.</p>
 
 <h3 id="les-guides-dimplémentation">Les guides d’implémentation</h3>
 
@@ -408,7 +408,7 @@ Il prend en entrée une arborescence de dossiers / fichiers bien définis, conte
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.8 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Apr 29, 2025 09:33+0000">2025-04-29</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.8 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Apr 29, 2025 09:41+0000">2025-04-29</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
