add link 5eddf0894d676dc034184521d203144c77999f9a

--- a/nr-add-examples/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-examples/ig/bonnes_pratiques_modeler.html
@@ -488,7 +488,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
 <h3 id="modèle-de-nommage-par-ressource-fhir">Modèle de nommage par ressource FHIR</h3>
 
-<p>Ci-dessous figurent les règles spécifiques à chaque type de ressource FHIR issus des travaux de David Ouagne (AP-HP) sous la forme de fiche. 
+<p>Ci-dessous figurent les règles spécifiques à chaque type de ressource FHIR issus des <a href="https://interop.aphp.fr/ig/fhir/core/best-practice.html">travaux de David Ouagne (AP-HP)</a> sous la forme de fiche.
 Chaque fiche présente les propriétés obligatoires de l’objet, avec le nom de la propriété puis sa valeur en respectant le format. Puis la règle de nommage du fichier contenant la ressource. Et enfin l’entête obligatoire du contenu du fichier de la ressource.</p>
 
 <h4 id="structuredefinition--profil">StructureDefinition : profil</h4>
@@ -1301,7 +1301,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.8 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Dec 4, 2025 21:28+0000">2025-12-04</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.8 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Dec 4, 2025 21:29+0000">2025-12-04</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
