--- a/nr-add-examples/ig/qa-ipreview.html
+++ b/nr-add-examples/ig/qa-ipreview.html
@@ -105,7 +105,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.8 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Thu, Dec 4, 2025 21:28+0000">2025-12-04</span>
+. Generated           <span title="Thu, Dec 4, 2025 21:29+0000">2025-12-04</span>
 
                     <br/>
 
@@ -135,7 +135,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.8 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Thu, Dec 4, 2025 21:28+0000">2025-12-04</span>
+. Generated           <span title="Thu, Dec 4, 2025 21:29+0000">2025-12-04</span>
 
                     <br/>
 
@@ -228,6 +228,19 @@ Le statut doit se placer dans l’attribut “version” du fichier sushi-config
         <td>
 Pour plus d’informations, consultez la           <a href="https://interop.esante.gouv.fr/ig/">liste des guides d’implémentation</a>
  à titre d’exemple.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="bonnes_pratiques_modeler.html">web</a>
+        </td>
+        <td>
+          <a href="https://interop.aphp.fr/ig/fhir/core/best-practice.html">interop.aphp.fr</a>
+        </td>
+        <td>
+Ci-dessous figurent les règles spécifiques à chaque type de ressource FHIR issus des           <a href="https://interop.aphp.fr/ig/fhir/core/best-practice.html">travaux de David Ouagne (AP-HP)</a>
+ sous la forme de fiche.
+Chaque fiche présente les propriétés obligatoires de l’objet, avec le nom de la propriété puis sa valeur en respectant le format. Puis la règle de nommage du fichier contenant la ressource. Et enfin l’entête obligatoire du contenu du fichier de la ressource.
         </td>
       </tr>
       <tr>
