--- a/nr-add-ps-doc/ig/qa.html
+++ b/nr-add-ps-doc/ig/qa.html
@@ -47,17 +47,31 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Validation Results for Documentation</h1>
- <p>Generated Mon Dec 22 09:11:42 UTC 2025, FHIR version 4.0.1 for ans.fr.documentation#0.1.9 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a> &amp; <a href="qa-ipreview.html">IP</a></p>
+ <p>Generated Mon Dec 22 09:53:03 UTC 2025, FHIR version 4.0.1 for ans.fr.documentation#0.1.9 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a> &amp; <a href="qa-ipreview.html">IP</a></p>
 <table class="grid"> <tr><td colspan=2><b>Quality Checks</b></td></tr>
  <tr><td>Publisher Version:</td><td><span>IG Publisher Version: v2.0.29</span></td></tr>
  <tr><td>Publication Code:</td><td>n/a<span style="color: maroon; font-weight: bold"> </span>. PackageId = ans.fr.documentation, Canonical = https://interop.esante.gouv.fr/ig/documentation</td></tr>
  <tr><td>Realm Check for n/a:</td><td><span style="color: maroon; font-weight: bold"></span><ul><li>n/a</li></ul></td></tr>
  <tr><td>Language Info:</td><td>This IG has no language information</td></tr>
  <tr><td>Publication Request:</td><td><table class="grid">
+ <tr><td>package-id</d><td>ans.fr.documentation</td></tr>
+ <tr><td>version</d><td>0.1.9</td></tr>
+ <tr><td>path</d><td>https://interop.esante.gouv.fr/ig/documentation/0.1.9</td></tr>
+ <tr><td>Pub-Mode</d><td>milestone</td></tr>
+ <tr><td>status</d><td>release</td></tr>
+ <tr><td>Release-Label</d><td>trial-use</td></tr>
+ <tr><td>Sequence (Group)</d><td>release</td></tr>
+ <tr><td>desc</d><td>Documentation des guides d'implémentation de l'ANS</td></tr>
+ <tr><td>changes</d><td>changes.html</td></tr>
+ <tr><td>ci-build</d><td>https://ansforge.github.io/IG-documentation/main/ig</td></tr>
  <tr><td>RelatedIgs</d><td>(None Found)</td></tr>
 </table>
-<ul><li>Version 0.1.9 has already been published <img src="icon-warning.png" height="16px" width="16px"/></li>
-<li>Publication Request is for version v0.1.9 which is already published <img src="icon-error.gif" height="16px" width="16px"/></li>
+<ul><li>Error fetching package-list from https://interop.esante.gouv.fr/ig/documentation: Forbidden <img src="icon-error.gif" height="16px" width="16px"/></li>
+<li>This appears to be the first publication, so first must be true <img src="icon-error.gif" height="16px" width="16px"/></li>
+<li>This IG is not yet published at all, so there must be "first" : true in the publication request <img src="icon-error.gif" height="16px" width="16px"/></li>
+<li>No publication request category found (needed for first publication - consult FHIR product director for a value <img src="icon-error.gif" height="16px" width="16px"/></li>
+<li>No publication request title found (needed for first publication) <img src="icon-error.gif" height="16px" width="16px"/></li>
+<li>No publication request introduction found (needed for first publication) <img src="icon-error.gif" height="16px" width="16px"/></li>
 </ul>
 </td></tr>
  <tr><td>Supressed Messages:</td><td><a href="#suppressed">19 Suppressed Issues</a>
@@ -82,7 +96,7 @@ hl7.fhir.r4.core#4.0.1:     <a href="http://hl7.org/fhir/R4/codesystem-guide-par
 </ul>
 </td></tr>
  <tr><td>Modifier Extensions:</td><td><span style="color: grey">(none)</span></td></tr>
- <tr><td>Previous Version Comparison:</td><td> </td></tr>
+ <tr><td>Previous Version Comparison:</td><td> Unable to compare with previous version: Unable to find version history at https://interop.esante.gouv.fr/ig/documentation (Problem #1 with package-list.json at https://interop.esante.gouv.fr/ig/documentation: Forbidden)</td></tr>
  <tr><td>IPA Comparison:</td><td> n/a</td></tr>
  <tr><td>IPS Comparison:</td><td> n/a</td></tr>
  <tr><td>Validation Flags:</td><td> On: autoLoad; Off: hintAboutNonMustSupport, anyExtensionsAllowed, checkAggregation, showReferenceMessages, noExperimentalContent, displayWarnings</td></tr>
